# Nano-PDF

./: .gitignore  README.md  pyproject.toml
nano_pdf/: ai_utils.py  main.py  pdf_utils.py
